scripts/infrastructure/k8s/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-data-loader
  labels:
    app: fastapi-data-loader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-data-loader
  template:
    metadata:
      labels:
        app: fastapi-data-loader
    spec:
      containers:
      - name: fastapi-data-loader
        image: kodekod2025/fastapi-data-loader:latest
        ports:
        - containerPort: 8002
