scripts/infrastructure/k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-data-loader
spec:
  selector:
    app: fastapi-data-loader
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
